# Svault

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  pyproject.toml  svault.svault-export.json  svaultdd.svault-export.json
.github/workflows/: fedora.yml  gui.yml  lint.yml  macos.yml  release.yml  test.yml  ubuntu.yml  windows.yml
docs/: architecture.md  commands.md  daemon.md  gui-logic-inventory.md  gui-redesign-plan.md  gui.md  installation.md  mcp.md  native-ui-options.md  policy-engine.md  qa-checklist.md  recovery.md  roadmap.md  security.md  storage-backends.md  tui.md  walkthrough.md
docs/design_handoff_svault_gui/: README.md  Svault GUI Wireframes.html  wf.css
docs/screenshots/: README.md
docs/security-review/: PROMPT.md  README.md
docs/security-review/findings/: 0.5.0.md  0.6.0.md  0.7.0.md  0.9.0.md  0.9.9.md  gui-1.1.0.md
docs/security-review/reviews/: 0.5.0-claude-opus-4.8.md  0.5.0-deepseek-v4-pro.md  0.5.0-gemini-3.5-flash.md  0.5.0-glm-5.1.md  0.5.0-grok-4.3.md  0.7.0-claude-opus-4.8.md  0.7.0-glm5.1.md  0.7.0-opencode.md  0.9.9-claude-opus-4.8.md  0.9.9-grok-biuld.md  0.9.9-openai-gpt-5.5-opencode.md  1.1.1-claude-fable-5.md
docs/security-review/stress/: 0.6.0.md
gui/: README.md  UX-FIXES.md  index.html  package.json
gui-app/: README.md  UX-FIXES.md  package-lock.json  package.json
gui-app/src/: main.tsx
gui-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gui-app/src-tauri/src/: lib.rs  main.rs  tests.rs
gui-app/src-tauri/src/commands/: audit.rs  backup.rs  common.rs  judge.rs  mcp.rs  mod.rs  onboarding.rs  pending.rs  policy.rs  secrets.rs  session.rs  settings.rs  vaults.rs
gui-app/src/components/: ui.tsx
gui-app/src/lib/: api.ts  hooks.ts  time.ts
gui-app/src/screens/: Audit.tsx  Backup.tsx  Judges.tsx  Mcp.tsx  Onboarding.tsx  TrayPopover.tsx
gui/src/: App.tsx  main.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: error.rs  lib.rs  state.rs  tests.rs  tray.rs
gui/src-tauri/src/commands/: audit.rs  backup.rs  common.rs  judge.rs  mcp.rs  onboarding.rs  pending.rs  session.rs  settings.rs  vaults.rs
gui/src/components/: data-table.tsx  provider-logo.tsx  shell.tsx  ui.tsx
gui/src/lib/: api.ts  hooks.ts  theme.ts  time.ts  utils.ts
gui/src/screens/: Audit.tsx  Judges.tsx  Onboarding.tsx  Pending.tsx  Providers.tsx  Recover.tsx  Secrets.tsx  Settings.tsx  SignIn.tsx  Start.tsx  VaultConfig.tsx  Vaults.tsx
gui/src/store/: session.ts
scripts/: bundle-sidecar.sh  qa-gate.sh
src/: audit.rs  client.rs  config.rs  crypto.rs  daemon.rs  gate.rs  judge.rs  keyring.rs  lib.rs  main.rs  master.rs  meta.rs  passphrase.rs  policy.rs  portable.rs  recovery.rs  secfile.rs  session.rs  usage.rs  vault.rs
src/cli/: mod.rs
src/core/: audit.rs  config.rs  gate.rs  judge.rs  keyring.rs  master.rs  meta.rs  mod.rs  passphrase.rs  policy.rs  portable.rs  recovery.rs  secfile.rs  session.rs  testlock.rs  touchid.rs  usage.rs  vault.rs  yubikey.rs
src/daemon/: client.rs  mod.rs
src/gui/: mod.rs
src/mcp/: mod.rs
src/svault/: __main__.py
src/tui/: mod.rs  theme.rs  ui.rs
