[package]
name = "svault-ai"
version = "0.9.8"
edition = "2021"
authors = ["Soluzy <nima@soluzy.ro>"]
description = "Secret access layer for cooperative AI agents — structured, policy-gated, audited credential access"
license = "Apache-2.0"
repository = "https://github.com/Soluzy/Svault"
homepage = "https://github.com/Soluzy/Svault"
documentation = "https://docs.rs/svault-ai"
readme = "README.md"
keywords = ["security", "secrets", "vault", "ai", "encryption"]
categories = ["authentication", "cryptography", "command-line-utilities"]

[lib]
name = "svault_ai"
path = "src/lib.rs"

[[bin]]
name = "svault"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output + prompts
console = "0.15"
dialoguer = "0.11"

# Interactive TUI (Step 1+)
ratatui = "0.30"
crossterm = "0.29"

# Crypto — AES-256-GCM + Argon2id + HMAC-SHA256
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Memory safety — zero secrets on drop
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# AI judge — blocking HTTPS to OpenRouter (bundled rustls, no OpenSSL). The
# daemon is thread-per-connection/synchronous, so no async runtime is involved.
ureq = { version = "2", features = ["json", "tls"] }

# Error handling
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# YubiKey / FIDO2 unlock — CTAP2 over USB HID, hmac-secret extension. Optional and
# OFF by default: its `hidapi` dependency needs libudev on Linux, which would
# otherwise break the default build, `cargo install`, and docs.rs. Enable with
# `--features yubikey` (Linux also needs libudev-dev) for the real implementation;
# without it, the unlock keyslot is a no-op stub. See src/core/yubikey.rs.
ctap-hid-fido2 = { version = "3.5", optional = true }

[features]
default = []
# Real YubiKey (FIDO2 hmac-secret) unlock. Off by default so the base crate
# builds with no system dependencies; Linux additionally needs libudev-dev.
yubikey = ["dep:ctap-hid-fido2"]

# Unix daemon — setsid (detach) + kill (liveness / stop). Unix only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
