[package]
# Published as `svault-cli` from 2.0.0 (1.0.0 and earlier were published as
# `svault-ai`, now superseded — `svault` and `svault-core` are taken on
# crates.io). The installed binary has always been `svault`.
name = "svault-cli"
version = "1.1.1"
edition = "2021"
authors = ["Nima Karimi <nima.karimi@live.com>"]
description = "Svault — secret access layer for cooperative AI agents: structured, policy-gated, audited credential access over MCP (Claude Code, Codex, OpenCode) — CLI + TUI + MCP server + daemon"
license = "Apache-2.0"
repository = "https://github.com/nim444/Svault"
homepage = "https://github.com/nim444/Svault"
documentation = "https://docs.rs/svault-cli"
readme = "README.md"
# crates.io caps keywords at 5. Agent-host names (Claude Code, Codex, OpenCode)
# are surfaced via the README/description instead.
keywords = ["ai", "mcp", "agent", "secrets", "security"]
categories = ["authentication", "cryptography", "command-line-utilities"]

[lib]
name = "svault_cli"
path = "src/lib.rs"

[[bin]]
name = "svault"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output + prompts
console = "0.15"
dialoguer = "0.11"

# Interactive TUI (Step 1+)
ratatui = "0.30"
crossterm = "0.29"

# Crypto — AES-256-GCM + Argon2id + HMAC-SHA256
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Memory safety — zero secrets on drop
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# AI judge — blocking HTTPS to OpenRouter (bundled rustls, no OpenSSL). The
# daemon is thread-per-connection/synchronous, so no async runtime is involved.
ureq = { version = "2", features = ["json", "tls"] }

# Error handling
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# YubiKey / FIDO2 unlock — CTAP2 over USB HID, hmac-secret extension. Optional and
# OFF by default: its `hidapi` dependency needs libudev on Linux, which would
# otherwise break the default build, `cargo install`, and docs.rs. Enable with
# `--features yubikey` (Linux also needs libudev-dev) for the real implementation;
# without it, the unlock keyslot is a no-op stub. See src/core/yubikey.rs.
ctap-hid-fido2 = { version = "3.5", optional = true }

[features]
default = []
# Real YubiKey (FIDO2 hmac-secret) unlock. Off by default so the base crate
# builds with no system dependencies; Linux additionally needs libudev-dev.
yubikey = ["dep:ctap-hid-fido2"]

# Unix daemon — setsid (detach) + kill (liveness / stop). Unix only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Touch ID unlock — LocalAuthentication (biometric prompt) + the login keychain
# (KEK storage). macOS only; on other targets src/core/touchid.rs is a stub, so
# these never enter the Linux/Windows build. See src/core/touchid.rs.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-local-authentication = "0.3"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
