[project]
name = "svault"
version = "0.1.0"
description = "AI-aware secret access layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "cryptography>=42",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.scripts]
svault = "svault.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svault"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
]
