[package]
name = "svault-gui"
version = "1.1.1"
description = "Svault desktop GUI — a Tauri frontend over the svault-cli core/daemon"
authors = ["Nima Karimi <nima.karimi@live.com>"]
edition = "2021"
# Never published to crates.io — the GUI ships as desktop bundles (Tauri), with
# the svault binary as a sidecar. Only svault-cli is published.
publish = false

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# linker constraint — see rust-lang/cargo#8519).
name = "svault_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Name the executable "Svault" so the macOS app menu (and the dev process name)
# read "Svault" rather than the crate name.
[[bin]]
name = "Svault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The Svault core/daemon library — every command is a thin wrapper over it. The
# GUI never reimplements crypto, policy, or the judge; it drives this crate.
# The `yubikey` feature enables real FIDO2 hmac-secret detection/enrollment (the
# desktop app always wants it; macOS/Windows need no extra system deps, Linux
# needs libudev-dev).
svault-cli = { path = "../..", features = ["yubikey"] }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
# File-watcher for the live audit / MCP-log / daemon-status event streams.
notify = "6"

[dev-dependencies]
tempfile = "3"
